codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_registry_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

› [x] Terminal resize reflow       Rebuild Codewith-owned transcript scrollback when the terminal width changes.
  [ ] Memories                     Allow Codewith to create new memories from conversations and bring relevant
                                   memories into new conversations.
  [ ] Network proxy                Apply network proxy restrictions to sandboxed sessions that already have network
                                   access.
  [ ] External migration           Show a startup prompt when Codewith detects migratable external agent config for
                                   this machine or project.
  [ ] Prevent sleep while running  Keep your computer awake while Codewith is running a thread.
  [ ] Workflows                    Show workflow commands for drafting, saving, and running thread workflow specs.

  Press space to select or enter to save for next conversation
