codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__goal_manager_with_plan.snap
---
source: tui/src/chatwidget/tests/goal_menu.rs
expression: "render_bottom_popup(&chat, 110)"
---
  Goals
  2 planned · 1 in progress

  Search goals
› Current: Keep improving the bare goal    Keep improving the bare goal command until it feels calm and
                                           useful. · 12.5K/80K tokens · time 1m · +18 -4 LOC
  Cancel current goal                      Keep improving the bare goal command until it feels calm and
                                           useful.
  Plan: Map existing goal persistence and

  Press enter to confirm or esc to go back
